@@ -7,9 +7,9 @@ plugins {
     id 'eclipse'
     id 'idea'
     id 'jacoco'
-    id 'com.github.spotbugs' version '3.0.0'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.61'
+    id 'com.github.spotbugs' version '4.0.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.72'
     id 'org.jetbrains.dokka' version '0.9.18'
 }
 
@@ -27,20 +27,19 @@ apply from: "https://raw.githubusercontent.com/openlattice/gradles/master/repos.
 
 mainClassName = "com.kryptnostic.rhizome.core.RhizomeAws"
 
+ext.spotbugs_annotations_version = '4.0.0'
 spotbugs {
     reportLevel = 'high'
     toolVersion = "${spotbugs_annotations_version}"
 }
 
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
+spotbugsMain {
     reports {
         xml.enabled = false
         html.enabled = true
     }
     ignoreFailures = true
 }
-
-
 run {
     if (System.getProperty("exec.args") != null) {
         args System.getProperty("exec.args").split()
@@ -96,9 +95,12 @@ jacoco {
 
 dependencies {
     //Spotbugs
+    spotbugs 'com.github.spotbugs:spotbugs:4.0.0'
     spotbugsPlugins "com.h3xstream.findsecbugs:findsecbugs-plugin:${findsecbugs_version}"
+
     compileOnly "net.jcip:jcip-annotations:${jcip_version}"
     compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs_annotations_version}"
+
     testCompileOnly "net.jcip:jcip-annotations:${jcip_version}"
     testCompileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs_annotations_version}"
 
@@ -239,7 +241,6 @@ dependencies {
      * Transparent http clustering, distributed java.util collections
      */
     compile "com.hazelcast:hazelcast:${hazelcast_version}"
-    compile "com.hazelcast:hazelcast-client:${hazelcast_version}"
     compile "com.hazelcast:hazelcast-wm:${hazelcast_wm_version}"
     compile "com.hazelcast:hazelcast-spring:${hazelcast_version}"
 
@@ -255,6 +256,8 @@ dependencies {
     compile "org.eclipse.jetty.websocket:websocket-server:${jetty_version}"
     compile "org.eclipse.jetty.websocket:javax-websocket-server-impl:${jetty_version}"
     compile "org.eclipse.jetty:jetty-continuation:${jetty_version}"
+    compile "org.eclipse.jetty:jetty-alpn-java-server:${jetty_version}"
+    compile "org.eclipse.jetty.http2:http2-server:${jetty_version}"
 
     compile "io.netty:netty-transport-native-epoll:${netty_epoll_version}:${netty_os_arch}"
 
@@ -318,6 +321,16 @@ dependencies {
     compile "com.auth0:auth0:${project.auth0_version}"
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+}
+
+tasks.withType(Test) {
+    jvmArgs += [ "--add-modules", "java.se",
+                 "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED",
+                 "--add-opens","java.base/java.lang=ALL-UNNAMED",
+                 "--add-opens","java.base/java.nio=ALL-UNNAMED",
+                 "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
+                 "--add-opens","java.management/sun.management=ALL-UNNAMED",
+                 "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
 }
 
 eclipse {
